# ventora

./: Cargo.toml  LICENSE  config.toml  flake.nix  readme.txt
src/: config.rs  device.rs  main.rs  pwm.rs  temp.rs  utils.rs
src/ids/: amdgpu.ids  mod.rs
