[package]
name = "spnill"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[dependencies.tokio]
version = "1.33"
features = [
  "fs",
  "io-std",
  "macros",
  "sync",
  "rt-multi-thread",
]
