[package]
name = "ventora"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1.74"
clap = "4.4.8"
dirs = "5.0.1"
toml = "0.8.6"
glob = "0.3.1"
serde = "1.0"
ratatui = "0.24.0"

[dependencies.tokio]
version = "1.33"
features = [
  "fs",
  "io-std",
  "macros",
  "sync",
  "rt-multi-thread",
]

[dependencies.nix]
version = "0.27.1"
features = [
  "user"
]
